# lingua-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_PYPI.md  clean_result.py  language_detect.py  language_detect_v2.py  main.py  publish.sh  pyproject.toml  test_language_detect.py  test_language_detect_v2.py  test_language_detect_v2_realdata.py  zh_detect.py
.github/workflows/: release.yml
src/: lib.rs
