# Copyright © 2020-present Peter M. Stahl pemistahl@gmail.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "lingua"
version = "2.4.0"
authors = ["Peter M. Stahl <pemistahl@gmail.com>"]
description = """
An accurate natural language detection library, suitable for short text and mixed-language text
"""
homepage = "https://github.com/pemistahl/lingua-rs"
repository = "https://github.com/pemistahl/lingua-rs"
documentation = "https://docs.rs/lingua"
license = "Apache-2.0"
readme = "README.md"
edition = "2024"
categories = ["text-processing"]
keywords = [
    "language-processing",
    "language-detection",
    "language-recognition",
    "nlp"
]

[workspace]
members = ["language-models/en", "language-models/fr", "language-models/id", "language-models/ms", "language-models/pt", "language-models/es"]

[workspace.package]
version = "1.3.0"
authors = ["Peter M. Stahl <pemistahl@gmail.com>"]
homepage = "https://github.com/pemistahl/lingua-rs"
repository = "https://github.com/pemistahl/lingua-rs"
documentation = "https://docs.rs/lingua"
license = "Apache-2.0"
edition = "2024"
categories = ["text-processing"]
keywords = [
    "language-processing",
    "language-detection",
    "language-recognition",
    "nlp"
]

[profile.dev]
opt-level = 1

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "accuracy_reports"
required-features = ["accuracy-reports"]

[[bench]]
name = "benchmark"
harness = false
required-features = ["benchmark"]

[dependencies]
counter = "0.7.0"
dashmap = "6.1.0"
fastrand = { version = "2.3.0", features = ["js"] }
fst = "0.4.7"
include_dir = "0.7.4"
itertools = "0.14.0"
maplit = "1.0.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
# Keep 6 languages: English, French, Malay, Spanish, Portuguese, Indonesian
lingua-english-language-model = { path = "language-models/en", version = "1.3.0", optional = true }
lingua-french-language-model = { path = "language-models/fr", version = "1.3.0", optional = true }
lingua-indonesian-language-model = { path = "language-models/id", version = "1.3.0", optional = true }
lingua-malay-language-model = { path = "language-models/ms", version = "1.3.0", optional = true }
lingua-portuguese-language-model = { path = "language-models/pt", version = "1.3.0", optional = true }
lingua-spanish-language-model = { path = "language-models/es", version = "1.3.0", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4.5.54", optional = true, features = ["derive"] }
cld2 = { version = "1.0.2", optional = true }
indoc = { version = "2.0.7", optional = true }
polars = { version = "0.51.0", optional = true, features = ["csv", "lazy"] }
pyo3 = { version = "0.27.2", optional = true }
rayon = "1.11.0"
serde-pickle = { version = "1.2.0", optional = true }
titlecase = { version = "3.6.0", optional = true }
whatlang = { version = "0.18.0", optional = true }
whichlang = { version = "0.1.1", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.106"

[workspace.dependencies]
include_dir = "0.7.4"

[dev-dependencies]
float-cmp = "0.10.0"
indoc = "2.0.7"
rstest = "0.26.1"
tempfile = "3.24.0"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.8.1"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.56"

[features]
# Keep 6 languages: English, French, Malay, Spanish, Portuguese, Indonesian
default = ["english", "french", "indonesian", "malay", "portuguese", "spanish"]
accuracy-reports = ["clap", "cld2", "indoc", "polars", "titlecase", "whatlang", "whichlang"]
benchmark = ["cld2", "whatlang", "whichlang"]
python = ["pyo3", "serde-pickle"]
english = ["lingua-english-language-model"]
french = ["lingua-french-language-model"]
indonesian = ["lingua-indonesian-language-model"]
malay = ["lingua-malay-language-model"]
portuguese = ["lingua-portuguese-language-model"]
spanish = ["lingua-spanish-language-model"]
