#
# Copyright © 2020-present Peter M. Stahl pemistahl@gmail.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "lingua-slim"
version = "2.4.0"
authors = [{ name = "yqq", email = "yqq@yqq.cn" }]
description = "A slimmed-down language detection library - English, French, Malay, Spanish, Portuguese, Indonesian. Other languages use Unicode detection."
readme = "README_PYPI.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = [
    "language-detection",
    "language-recognition",
    "nlp"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: Indonesian",
    "Natural Language :: Malay",
    "Natural Language :: Portuguese",
    "Natural Language :: Spanish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
homepage = "https://github.com/youngqqcn/lingua-rs"
repository = "https://github.com/youngqqcn/lingua-rs"

[project.optional-dependencies]
test = ["pytest == 9.0.1"]

[tool.maturin]
module-name = "lingua"
features = ["pyo3/extension-module", "pyo3/generate-import-lib", "python"]

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

