[project]
name = "cs-language-detect"
version = "0.1.0"
description = "Language detection utility supporting Chinese (Simplified/Traditional/Cantonese), English, French, Japanese, Korean, Thai, and more."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lingua-slim>=2.4.0",
    "opencc-python-reimplemented>=0.1.7",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
